# AskYoutube-Backend

./: README.md  main.py  pyproject.toml  requirements.txt
app/components/: models.py  output_parser.py  pinecone.py  prompt.py  textsplitter.py  utils.py  vector_store.py  youtube_transcripts_loader.py
app/db/: config.py
app/models/: schemas.py
app/routes/: api.py
app/services/: youtube.py
